<resources>
    <string name="app_name">Sugar</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="guest_login">Guest Login</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_failed">"Login Failed"</string>
    <string name="signup">Sign Up</string>
    <string name="signup_failed">"Sign Up Failed"</string>
    <string name="login_instead">Login instead</string>

    <string name="error_mail_empty">Email field cannot be empty</string>
    <string name="error_mail_used">Provided email address is already in use. Please login instead.</string>
    <string name="error_not_found">User with such email is not found in the system. Please sign up instead.</string>
    <string name="error_mail_used_new">Provided email address is already in use. Consider choosing a different one.</string>
    <string name="error_mail_regex">The email is in a wrong format. Please provide a correct address like: "example@gmail.com"</string>

    <string name="error_pass_empty">Password field cannot be empty.</string>
    <string name="error_confirm_password_empty">Please confirm the password you provided.</string>
    <string name="error_pass_nomatch">Both passwords should match.</string>
    <string name="error_pass_wrong">The password is wrong. Please make sure you typed everything correctly.</string>
    <string name="error_pass_weak">The password is too weak. Make sure it is at least 6 characters long.</string>
    <string name="error_invalid_credentials">Either email or password is wrong. Please make sure you wrote everything right.</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="new_here">New here? Click this button to add your device.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">Login for better experience</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="greetings_user">Thank you for choosing \'Sugar\'.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="manage_profile">Manage</string>
    <string name="logout">Logout</string>
    <string name="new_email">New email</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="pick_color">Pick your color.</string>
    <string name="set_color">Set chosen color</string>
    <string name="pick_color_b">Pick Color</string>
    <string name="color_customization">Color Customization</string>
    <string name="choose_color">Choose Color</string>
    <string name="open_color_picker">Open Color Picker</string>
    <string name="language">Language</string>
    <string name="machine_notes">Machine notes (Optional)</string>
    <string name="add">Add</string>

    <string name="error_unknown_command_1">Unknown command: "</string>
    <string name="error_unknown_command_2">". Please write help for the list of all available commands.</string>
    <string name="error_unknown_error">"Unknown error has occured."</string>
    <string name="error_device_null">No device located on the USB bus. Please connect the device first.</string>
    <string name="error_usb_permission_denied">Usb permission denied.</string>
    <string name="error_device_connected">The device is already connected.</string>
    <string name="error_device_not_connected">The device is not connected.</string>

    <string name="connecting_to_device">Connecting…  </string>
    <string name="connected_to_device">Connected to device: </string>
    <string name="flashing_the_daemon">Flashing the daemon.</string>

    <string name="cmd_help_info">List of available commands:\nhelp - shows this information;\nconnect - connects to the target device;\ndisconnect - disconnects from the target device;\nclear - clears all messages in the terminal;</string>
    <string name="nothing_yet">Nothing yet :(</string>
    <string name="terminal">Terminal</string>
    <string name="storage">Storage</string>
</resources>