<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:background="@color/main_variant"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="45dp"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/light"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_transparent" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgotRedirect"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLogin"
                android:layout_alignParentStart="true"

                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/main" />

            <TextView
                android:id="@+id/signUpRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLogin"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="66dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/textViewForgotPassword"
                android:text="@string/register"
                android:textAlignment="textEnd"
                android:textColor="@color/main" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:layout_marginTop="47dp"
                android:layout_centerHorizontal="true"
                android:shadowColor="@color/black"
                android:text="@string/login" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
