<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Profile CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/main_transparent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="45dp"
        app:cardElevation="20dp"
        app:layout_goneMarginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/profile_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_user_pfp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/nav_header_desc"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/profile_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nav_header_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"/>

            <Spinner
                android:id="@+id/profile_management_spinner"
                android:spinnerMode="dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:dropDownVerticalOffset="36dp"
                android:popupBackground="@android:color/transparent"
                android:dropDownSelector="@android:color/transparent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_email"
                android:textSize="14sp"
                android:textColor="@color/main"
                android:gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_password"
                android:textSize="14sp"
                android:textColor="@color/main"
                android:gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/logout"
                android:textSize="14sp"
                android:textColor="@color/main"
                android:gravity="center"
                android:visibility="gone"/>

            <!-- Change Email Layout -->
            <LinearLayout
                android:id="@+id/change_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/new_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_email"/>

                <TextView
                    android:id="@+id/new_email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_password"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/main"/>

                <Button
                    android:id="@+id/change_email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_email"/>
            </LinearLayout>

            <!-- Change Password Layout -->
            <LinearLayout
                android:id="@+id/change_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/old_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"/>

                <EditText
                    android:id="@+id/new_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"/>

                <TextView
                    android:id="@+id/new_pass_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_password"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/main"/>

                <Button
                    android:id="@+id/change_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Logout Button -->
                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
